Tweak array component to support errors

--- a/lib/engines/content_block_manager/app/components/content_block_manager/content_block_edition/details/fields/array_component.html.erb
+++ b/lib/engines/content_block_manager/app/components/content_block_manager/content_block_edition/details/fields/array_component.html.erb
@@ -2,6 +2,8 @@
   legend_text: field.humanize,
   heading_level: 3,
   heading_size: "l",
+  id:,
+  error_message:,
 } do %>
   <% render "govuk_publishing_components/components/add_another", {
     fieldset_legend: field.humanize,
