--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/schedule/edit.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/schedule/edit.html.erb
@@ -2,4 +2,5 @@
   context: "Edit a content block",
   back_link: content_block_manager.content_block_manager_content_block_document_path(id: @content_block_edition.document.id),
   form_url: content_block_manager.content_block_manager_content_block_document_update_schedule_path(document_id: @content_block_edition.document.id),
+  is_rescheduling: true,
 } %>
