Add copy to homepage header
This will help users know where they are and what the purpose of the
system is. The copy is the same as that in Signon.

--- a/lib/engines/content_block_manager/app/assets/stylesheets/content_block_manager/views/_content_block_manager_header.scss
+++ b/lib/engines/content_block_manager/app/assets/stylesheets/content_block_manager/views/_content_block_manager_header.scss
@@ -4,7 +4,7 @@
 
   &--column-right {
     display: flex;
-    align-self: center;
+    align-self: flex-start;
     justify-content: flex-end;
   }
 }
