--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/index.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/index.html.erb
@@ -12,9 +12,11 @@
 
 <div class="govuk-grid-row content-block-manager-header">
     <div class="govuk-grid-column-one-half">
-      <h1 class="gem-c-title__text govuk-heading-xl">
+      <h1 class="govuk-heading-xl content-block-manager-header--heading">
         Content Block Manager
       </h1>
+
+      <p class="govuk-body">Create, edit and use standardised content across GOV.UK</p>
     </div>
     <div class="govuk-grid-column-one-half content-block-manager-header--column-right">
       <div>
