--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/schedule/edit.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/schedule/edit.html.erb
@@ -1,6 +1,10 @@
-<%= render "content_block_manager/content_block/shared/schedule_publishing", {
-  context: "Edit a content block",
-  back_link: content_block_manager.content_block_manager_content_block_document_path(id: @content_block_edition.document.id),
-  form_url: content_block_manager.content_block_manager_content_block_document_update_schedule_path(document_id: @content_block_edition.document.id),
-  is_rescheduling: true,
-} %>
+<%=
+  render ContentBlockManager::Shared::SchedulePublishingComponent.new(
+    context: "Edit a content block",
+    content_block_edition: @content_block_edition,
+    params:,
+    back_link: content_block_manager.content_block_manager_content_block_document_path(id: @content_block_edition.document.id),
+    form_url: content_block_manager.content_block_manager_content_block_document_update_schedule_path(document_id: @content_block_edition.document.id),
+    is_rescheduling: true,
+  )
+%>
